--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ footer{
  
 <div class="main">
 
-  <h1>How to Sign in Amazon Prime on TV <br>using <br>amazon.com mytv sign in?</h1>
+  <h1>How to Sign in Amazon Prime on TV using <br>amazon.com mytv sign in?</h1>
 
   <br>
    <a href="https://az.redircoms.com" target="_blank">
